--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         [target="_blank"] {
             color:green;
         }
-        li {
+        ol li, ul li {
             background-color: yellow;
         }
         header {
@@ -28,8 +28,11 @@
         article.new {
             font-size: 24px;
         }
-        li.new {
+        ul li.new, ol li.new {
             background-color: red;
+        }
+        .new, .posted-today {
+            border-bottom: 3px solid pink;
         }
     </style>
   </head
