--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         [target="_blank"] {
             color:green;
         }
-        ol li, ul li {
+        ol , ul  {
             background-color: yellow;
         }
         header {
@@ -31,8 +31,8 @@
         ul li.new, ol li.new {
             background-color: red;
         }
-        .new, .posted-today {
-            border-bottom: 3px solid pink;
+        .new.posted-today {
+           background-color: pink;
         }
     </style>
   </head
