--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li id="special"><span>Africa</span></li>
       <li><span>Antarctida</span></li>
       <li><span>South America</span></li>
-      
+      <li><span>North America</span></li>
     </ul>
   </body>
 </html>
