--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </ul>
         </li>
       </ol>
-    </section>
+    </secton>
     <section class="to-be-learned">
       <h2>А об этом еще предстоит узнать:</h2>
       <ol>
