--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
        a:link{
         background-color: black;
-        color: write;
+        color: white;
       }
       
       
