--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       crossorigin="anonymous"
     />
    <style>
-     li {
+     input[type="checkbox"] {
        margin-left:50px;
      }
      label {
        text-transform: uppercase;
      }
-     #special{
+     #special::first-letter{
       color:green;
       font-size: 100px;
      }
