--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
    <style>
-     input[type="checkbox"] {
+     input[type="checkbox"]:checked {
        margin-left:50px;
      }
      label {
