--- a/index.html
+++ b/index.html
@@ -9,25 +9,17 @@
       integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU="
       crossorigin="anonymous"
     />
-   <style>
-     input[type="checkbox"]:checked {
-       margin-left:50px;
-     }
-     label {
-       text-transform: uppercase;
-     }
-     #special::first-letter{
-      color:green;
-      font-size: 100px;
-     }
-     h1 {
-      color:blue;
-    
-    }
-    a:visited {
-      color: grey;
-    }
-   </style>
+    <style>
+      body{
+        background-color: #bdc3c7;
+      }
+      h1{
+        color:#9b59b6;
+      }
+      h2{
+        color:orange;
+      }
+    </style>
   </head>
 
   <body>
