--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
       h2{
         color:orange;
       }
+     ul li{
+        color:blue;
+      }
+      p{
+        color:yellow;
+      }
+      a{
+        border: 3px solid red; 
+      }
+      .hello{
+        color:white;
+      }
+      #special{
+        border:2px solid blue;
+      }
+      p{
+        font-size: 25px;
+      }
+      input[type="text"]{
+        background-color: gray;
+      }
+      
+
     </style>
   </head>
 
@@ -37,6 +60,7 @@
         Tom Sawyer is a boy of about 16 years of age, who resides in the fictional town of St.
         Petersburg, Missouri, in about the year 1845
       </p>
+     
     </div>
 
     <div>
