--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
      ul li{
         color:blue;
       }
+     p:first-child{
+       background-color: yellow;
+     }
+     input{
+       border: 3px solid red;
+     }
+     .hello{
+       color:white;
+     }
+     .specaal {
+       border: 2px solid blue;
+     }
+     div>p:last-child{
+      font-size: 25px;
+     }
      
 
     </style>
