--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
      ul li{
         color:blue;
       }
-     p:first-child{
+      :nth-child(2) > p{
        background-color: yellow;
+      
      }
      input{
        border: 3px solid red;
