--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
      div>p:last-child{
       font-size: 25px;
      }
-     
+     input[ type="text"]{
+       background-color: grey;
+     }
 
     </style>
   </head>
