--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       font-size: 25px;
      }
      input[ type="text"]{
-       background-color: grey;
+       background: grey;
      }
 
     </style>
