--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
      .specaal {
        border: 2px solid blue;
      }
-     div>p:last-child{
+     div  p{
       font-size: 25px;
      }
-     input[ type="text"]{
+     input[type="text"]{
        background: grey;
      }
 
