--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        border: 3px solid red;
      }
      .hello{
-       color:white;
+       background-color:white;
      }
      .specaal {
        border: 2px solid blue;
@@ -39,7 +39,7 @@
       font-size: 25px;
      }
      input[type="text"]{
-       background: grey;
+       background-color: grey;
      }
 
     </style>
