--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
      .hello{
        background-color:white;
      }
-     .specaal {
+     #special {
        border: 2px solid blue;
+       background-color: yellow;
      }
      div  p{
       font-size: 25px;
