--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
      div  p{
       font-size: 25px;
      }
+     div p{
+       background-color: yellow;
+     }
      input[type="text"]{
        background-color: grey;
      }
