--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
      input[type="text"]{
        background-color: grey;
      }
+     p em{
+       color: white;
+     }
 
     </style>
   </head>
