--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
      }
      div p{
        background-color: yellow;
+       border: 5px;
      }
      input[type="text"]{
        background-color: grey;
