--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      }
      div p{
        background-color: yellow;
-       border: 5px;
+       border: 5px solid white;
      }
      input[type="text"]{
        background-color: grey;
