--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
      }
      div p{
        background-color: yellow;
-       border: 5px solid white;
+     
+     }
+     p:nth-child(3){
+      border: 5px solid white;
      }
      input[type="text"]{
        background-color: grey;
