--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       .rectangle{
         width: 100px;
         height: 50px;
-        border-radius: 20px;
+        border-radius: 15px;
         background-color: forestgreen;
       }
       .oval{
@@ -36,7 +36,7 @@
         height: 50px;
         width: 0px;
         border:50px solid transparent;
-        border-top-color: red;
+        border-top-color: brown;
       }
     </style>
   </head>
