--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 
   <body>
     <div class="rectangle">
-      I am learning box model in css
+      I am learning box model in CSS
     </div>
     <div class="rectangle">
-      I am learning box model in css
+      I am learning box model in CSS
     </div>
     <div class="rectangle">
-      I am learning box model in css
+      I am learning box model in CSS
     </div>
     <div class="rectangle">
-      I am learning box model in css
+      I am learning box model in CSS
     </div>
     <div class="rectangle">
-      I am learning box model in css
+      I am learning box model in CSS
     </div>
     
     
