--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
        border: 3px solid black;
        padding: 50px;
        background-color: aqua;
+       margin: 50px;
       }
      
     </style>
