--- a/index.html
+++ b/index.html
@@ -13,63 +13,46 @@
       *{
         box-sizing: border-box;
       }
-      .container{
-        width: 50%;
+      .block_red{
+        width: 20%;
         float: left;
+        height: 200px;
+        background-color: red;
       }
-.green{
-  background-color: green;
-  float:left;
-}
-.red{
-  background-color: red;
-  float:right;
-}
-      
-      
-      .square {
-        width: 100px;
-        height: 100px;
+      .block_green{
+        width: 20%;
+        float: left;
+        height: 200px;
+        background-color: green;
+      }
+      .block_blue{
+        width: 20%;
+        float: left;
+        height: 200px;
+        background-color: blue;
+      }
+      .block_yellow{
+        width: 20%;
+        float: left;
+        height: 200px;
+        background-color: yellow;
+      }
+      .block_black{
+        width: 20%;
+        float: left;
+        height: 200px;
+        background-color: black;
       }
 
-      section {
-        background: aquamarine;
-        padding: 16px;
-      }
 
-      footer {
-        height: 30px;
-        border: 2px solid black;
-        clear: both;
-      }
     </style>
   </head>
 
   <body>
-    <section class="container">
-      <h2>Big text</h2>
-      <div class="red square"></div>
-      <div class="green square"></div>
-      <p>
-        The float CSS property places an element on the left or right side of its container,
-        allowing text and inline elements to wrap around it. The element is removed from the normal
-        flow of the page, though still remaining a part of the flow (in contrast to absolute
-        positioning). As mentioned above, when an element is floated, it is taken out of the normal
-        flow of the document (though still remaining part of it). It is shifted to the left, or
-        right, until it touches the edge of its containing box, or another floated element. In this
-        example, there are three colored squares. Two are floated left, and one is floated right.
-        Note that the second "left" square is placed to the right of the first. Additional squares
-        would continue to stack to the right, until they filled the containing box, after which they
-        would wrap to the next line.
-      </p>
-      <footer class="footer"></footer>
-    </section>
-    <section class="container">
-      <h2>Small text</h2>
-      <div class="red square"></div>
-      <div class="green square"></div>
-      <p>Small text</p>
-      <footer class="footer"></footer>
-    </section>
+    <div class="block_red"></div>
+    <div class="block_green"></div>
+    <div class="block_blue"></div>
+    <div class="block_yellow"></div>
+    <div class="block_black"></div>
   </body>
 </html>
