--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         height: 40px;
       }
       .navigation{
+        height: 40px;
         margin: auto;
       }
       .nav-item{
@@ -38,8 +39,8 @@
         width: 200px;
         background-color: aquamarine;
         position:relative;
-        left: 300px;
-        top: 200px;
+        left: 40px;
+        top: 80px;
       
         
       }
