--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         margin-left:16px;
       }
       .nav-item{
-        margin-left:12px;
+        margin-right:12px;
         height: 40px;
         display: inline-block;
         
