--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         height: 40px;
       }
       .navigation{
+        z-index: 1;
         margin-left:16px;
       }
       .nav-list{
@@ -35,6 +36,7 @@
         color: white;
       }
       .content{
+        z-index: 2;
         position:relative;
         background-color: beige;
         height: 5000px;
