--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         z-index: -10ъ;
         background-color: darkturquoise;
         height: 40px;
-        clear: both;
+        position: fixed;
       }
       .navigation{
         
