--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         flex-shrink: 1;
         align-items: center;
         justify-content: space-around;
+        flex-grow: 1;
       }
     
       .container  {
