--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       crossorigin="anonymous"
     />
   <style>
-    
+    *{
+      box-sizing: border-box;
+    }
     .header{
       height: 40px;
       background-color: yellow;
@@ -25,12 +27,14 @@
       display: flex;
     }
     .navigation{
-      margin: 0;
+      padding-left: 20px;
+      margin: 0px;
       display:flex;
       list-style-type: none;
     }
     .navigation_item {
-       margin-right: 10px;
+       margin-right: 10px
+      
     }
     .footer_text{
       margin: auto;
