--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       align-items: center;
     }
     .news {
-      
+      margin: 0px;
       width: 200px;
       background-color: grey;
       
@@ -64,6 +64,9 @@
     .news h2{
       display: flex;
       justify-content: center;
+    }
+    .news ul{
+      padding-left: 20px;
     }
     .news li{
       height: 40px;
