--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       display: flex;
     }
     .navigation{
-      padding-left: 20px;
+      padding-left: 16px;
       margin: 0px;
       display:flex;
       list-style-type: none;
@@ -89,7 +89,7 @@
   </header>
   <main class="content">
     <section class="dashboard">
-      <h2>I can use FlexBox!!!</h2>
+      <h2>I can use Flexbox!!!</h2>
     </section>
     <aside class="news">
         <h2>News</h2>
