--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
       margin: 0px;
       width: 200px;
       background-color: grey;
+ 
       
     }
     .news h2{
+      margin-top: 16px;
       display: flex;
       justify-content: center;
     }
